--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=24900_alm_cipoc
+sonar.projectKey=24900_alm_cipoc:master
 sonar.projectName=2900_alm_cipoc
 sonar.projectVersion=1.0
 sonar.sources=./src
